# GLScene

./: CMakeLists.txt  README.md  imgui.ini  main.cpp
Core/ECS/Systems/: LightingSystem.h
Core/Headers/: Components.h  Entity.h  Material.h  Mesh.h
Core/Sources/: Components.cpp  Entity.cpp  Material.cpp  Mesh.cpp
Main/: Engine.cpp  Engine.h  Scene.cpp  Scene.h
Math/: Mat4.h  Math.h  Vec2.h  Vec3.h  Vec4.h
Objects/Headers/: Camera.h  EBO.h  Shader.h  Texture.h  VAO.h  VBO.h
Objects/Sources/: Camera.cpp  Shader.cpp  Texture.cpp  VAO.cpp
Shaders/: default.frag  default.vert  gouraud.frag  gouraud.vert  lightAffected.frag  plain.frag  simpleTex.frag  test.glsl  testF.glsl  textured.frag  world_grid.frag  world_grid.vert
Shapes/Headers/: Cube.h  Floor.h
